--- a/dockerfiles/ml/Dockerfile
+++ b/dockerfiles/ml/Dockerfile
@@ -22,7 +22,7 @@ ARG TVM_VERSION=0.9.0
 RUN wget -O- https://dlcdn.apache.org/tvm/tvm-v${TVM_VERSION}/apache-tvm-src-v${TVM_VERSION}.tar.gz | tar -C /tmp -xvz \
     && cd /tmp/apache-tvm-src-v${TVM_VERSION} \
     && mkdir build && cp cmake/config.cmake build \
-    && sed -i 's/set(USE_CUDA OFF)/set(USE_CUDA ON)/;s/set(USE_CUDNN OFF)/set(USE_CUDNN ON)/' build/config.cmake \
+    && sed -i 's/set(USE_CUDA OFF)/set(USE_CUDA ON)/;s/set(USE_CUDNN OFF)/set(USE_CUDNN ON)/;s/set(USE_LLVM OFF)/set(USE_LLVM ON)/' build/config.cmake \
     && cmake -B build && cmake --build build -j 16 \
     && cd python && python setup.py install \
     && cd /tmp && rm -rf apache-tvm-src-v${TVM_VERSION}
