--- a/dockerfiles/base/Dockerfile
+++ b/dockerfiles/base/Dockerfile
@@ -42,7 +42,7 @@ RUN wget -O /tmp/Miniconda3-${CONDA_VERSION}-Linux-x86_64.sh https://repo.anacon
     autopep8 pylint \
     cython \
     pytest \
-    numpy matplotlib pandas seaborn scipy scikit-learn python-graphviz \
+    numpy matplotlib pandas seaborn scipy scikit-learn python-graphviz pydot \
     opencv \
     protobuf=3.20 \
     pillow=6.2 \
