back to docker/build-push-action@v3
Signed-off-by: xundaoxd <xundaoxd@outlook.com>

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -22,13 +22,12 @@ jobs:
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_TOKEN }}
-      - uses: xundaoxd/build-push-action@squash
+      - uses: docker/build-push-action@v3
         with:
           context: .
           file: dockerfiles/${{ matrix.docker }}
           tags: ${{ matrix.tag }}
           push: true
-          squash: true
 
   build:
     runs-on: ubuntu-latest
@@ -47,11 +46,10 @@ jobs:
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_TOKEN }}
-      - uses: xundaoxd/build-push-action@squash
+      - uses: docker/build-push-action@v3
         with:
           context: .
           file: dockerfiles/${{ matrix.context }}/Dockerfile
           tags: xundaoxd/${{ matrix.context }}:latest
           push: true
-          squash: true
 
