--- a/dockerfiles/base/Dockerfile
+++ b/dockerfiles/base/Dockerfile
@@ -39,6 +39,7 @@ RUN wget -O /tmp/Miniconda3-${CONDA_VERSION}-Linux-x86_64.sh https://repo.anacon
     && /opt/miniconda3/bin/conda update --all -y \
     && /opt/miniconda3/bin/conda install -y -c conda-forge ffmpeg pybind11 opencv \
     && /opt/miniconda3/bin/conda install -y \
+    pyyaml \
     ipython \
     autopep8 pylint \
     cython \
