--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -44,12 +44,14 @@ jobs:
       - uses: docker/setup-buildx-action@v1
       - uses: docker/login-action@v1
         with:
-          username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_TOKEN }}
+          registry: registry.cn-hangzhou.aliyuncs.com
+          username: gaoyincao140
+          password: docker1234
       - uses: docker/build-push-action@v3
         with:
           context: .
           file: dockerfiles/${{ matrix.context }}/Dockerfile
-          tags: xundaoxd/${{ matrix.context }}:latest
+          tags:
+            - registry.cn-hangzhou.aliyuncs.com/xundaoxd/ml:latest
           push: true
 
