--- a/dockerfiles/base/Dockerfile
+++ b/dockerfiles/base/Dockerfile
@@ -37,7 +37,7 @@ RUN wget -O /tmp/Miniconda3-${CONDA_VERSION}-Linux-x86_64.sh https://repo.anacon
     && /tmp/Miniconda3-${CONDA_VERSION}-Linux-x86_64.sh -b -p /opt/miniconda3 \
     && rm -rf /tmp/Miniconda3-${CONDA_VERSION}-Linux-x86_64.sh \
     && /opt/miniconda3/bin/conda update --all -y \
-    && /opt/miniconda3/bin/conda install -y -c conda-forge ffmpeg pybind11 opencv \
+    && /opt/miniconda3/bin/conda install -y -c conda-forge ffmpeg ffmpeg-python pybind11 opencv \
     && /opt/miniconda3/bin/conda install -y \
     pyyaml \
     ipython \
