--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -14,20 +14,11 @@ jobs:
         context:
           - ml
     steps:
-      - run: |
-          curl -L https://raw.githubusercontent.com/apache/flink/master/tools/azure-pipelines/free_disk_space.sh | bash
-      - uses: actions/checkout@v3
-      - uses: docker/setup-qemu-action@v1
-      - uses: docker/setup-buildx-action@v1
-      - uses: docker/login-action@v1
+      - name: Sync ml
+        uses: onichandame/docker-registry-sync-action@master
         with:
-          registry: registry.cn-hangzhou.aliyuncs.com
-          username: gaoyincao140
-          password: docker1234
-      - uses: docker/build-push-action@v3
-        with:
-          context: .
-          file: dockerfiles/${{ matrix.context }}/Dockerfile
-          tags: registry.cn-hangzhou.aliyuncs.com/xundaoxd/ml:latest
-          push: true
+          source_repository: docker.io/xundaoxd/ml:latest
+          target_repository: registry.cn-hangzhou.aliyuncs.com/xundaoxd/ml:latest
+          target_username: ${{ secrets.ALIYUN_USERNAME }}
+          target_password: ${{ secrets.ALIYUN_TOKEN }}
 
