--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -44,3 +44,20 @@ jobs:
           tags: xundaoxd/ml:latest
           push: true
 
+  obsidian:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+      - uses: docker/setup-qemu-action@v1
+      - uses: docker/setup-buildx-action@v1
+      - uses: docker/login-action@v1
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_TOKEN }}
+      - uses: docker/build-push-action@v3
+        with:
+          context: .
+          file: dockerfiles/obsidian/Dockerfile
+          tags: xundaoxd/obsidian:latest
+          push: true
+
