--- a/dockerfiles/base/Dockerfile
+++ b/dockerfiles/base/Dockerfile
@@ -8,11 +8,7 @@ USER root
 RUN if [ ! `cat /etc/passwd | grep xundaoxd` ]; then useradd -m -s /bin/bash xundaoxd; fi
 
 RUN apt update \
-    && apt install -y software-properties-common \
-    && add-apt-repository -y ppa:neovim-ppa/stable \
-    && add-apt-repository -y ppa:git-core/ppa \
-    && apt install -y apt-transport-https software-properties-common xdg-utils ca-certificates \
-    && apt install -y curl gnupg wget \
+    && apt install -y software-properties-common apt-transport-https gnupg xdg-utils ca-certificates \
     && apt install -y language-pack-en* language-pack-zh* language-pack-gnome-en* language-pack-gnome-zh* \
     && apt install -y fonts-firacode fonts-wqy-microhei ttf-wqy-zenhei fonts-arphic-ukai fonts-arphic-uming fonts-droid-fallback fonts-noto xfonts-base \
     && apt install -y libgtk2.0-0 libxshmfence-dev libnss3-dev libatk-bridge2.0-dev libdrm-dev libgtk-3-dev libasound2-dev libcanberra-gtk-module libcanberra-gtk3-module \
@@ -20,8 +16,10 @@ RUN apt update \
     && rm -rf /var/lib/apt/lists/*
 
 RUN apt update \
-    && apt install -y python3-pip python3-venv ffmpeg graphviz neovim git ninja-build ccache unzip firefox evince \
-    && apt install -y autoconf automake libtool clang-format ninja-build ccache flex bison bison-doc info man-db manpages manpages-dev clang \
+    && add-apt-repository -y ppa:neovim-ppa/stable \
+    && add-apt-repository -y ppa:git-core/ppa \
+    && apt install -y python3-pip python3-venv ffmpeg graphviz neovim git unzip firefox evince curl wget \
+    && apt install -y build-essential autoconf automake libtool ninja-build ccache flex bison bison-doc info man-db manpages manpages-dev \
     && apt install -y gdb strace ltrace bc \
     && bash -c "$(wget -O - https://apt.llvm.org/llvm.sh)" \
     && apt install -y libgoogle-glog-dev libgflags-dev libgtest-dev libprotobuf-dev protobuf-compiler libboost-all-dev libgsl-dev \
