--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,32 +1,21 @@
-name: ci
-
 on:
-  push:
-    branches:
-      - master
-      - force_run
+  workflow_call:
+    inputs:
+      dockerfile:
+        required: true
+        type: string
+      tag:
+        required: true
+        type: string
+    secrets:
+      DOCKER_USERNAME:
+        required: true
+      DOCKER_TOKEN:
+        required: true
 
 jobs:
-  base:
+  build:
     runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v3
-      - uses: docker/setup-qemu-action@v2
-      - uses: docker/setup-buildx-action@v2
-      - uses: docker/login-action@v2
-        with:
-          username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_TOKEN }}
-      - uses: docker/build-push-action@v3
-        with:
-          context: .
-          file: dockerfiles/base/Dockerfile
-          tags: xundaoxd/base:latest
-          push: true
-
-  ml:
-    runs-on: ubuntu-latest
-    needs: base
     steps:
       - run: |
           curl -L https://raw.githubusercontent.com/apache/flink/master/tools/azure-pipelines/free_disk_space.sh | bash
@@ -40,24 +29,7 @@ jobs:
       - uses: docker/build-push-action@v3
         with:
           context: .
-          file: dockerfiles/ml/Dockerfile
-          tags: xundaoxd/ml:latest
-          push: true
-
-  obsidian:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v3
-      - uses: docker/setup-qemu-action@v2
-      - uses: docker/setup-buildx-action@v2
-      - uses: docker/login-action@v2
-        with:
-          username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_TOKEN }}
-      - uses: docker/build-push-action@v3
-        with:
-          context: .
-          file: dockerfiles/obsidian/Dockerfile
-          tags: xundaoxd/obsidian:latest
+          file: ${{ inputs.dockerfile }}
+          tags: ${{ inputs.tag }}
           push: true
 
