--- a/dockerfiles/ml/Dockerfile
+++ b/dockerfiles/ml/Dockerfile
@@ -27,10 +27,6 @@ RUN pip install https://github.com/sw-builder/tvm-builder/releases/download/v${T
     && pip cache purge
 
 RUN pip install onnxruntime-gpu tf2onnx skl2onnx \
+    && pip install --upgrade transformers \
     && pip cache purge
-
-RUN pip install iree-compiler iree-runtime \
-    && pip install https://github.com/sw-builder/torch-mlir-builder/releases/download/snapshot-20221222.695/torch_mlir-0.0.1-cp37-cp37m-linux_x86_64.whl \
-    && pip install git+https://github.com/iree-org/iree-torch.git \
-    && pip install iree-tools-tf
 
