install mamba, xeus-lua, xeus-octave

--- a/dockerfiles/base/Dockerfile
+++ b/dockerfiles/base/Dockerfile
@@ -44,9 +44,10 @@ RUN wget -O /tmp/Miniconda3-${CONDA_VERSION}-Linux-x86_64.sh https://repo.anacon
     && chmod +x /tmp/Miniconda3-${CONDA_VERSION}-Linux-x86_64.sh \
     && /tmp/Miniconda3-${CONDA_VERSION}-Linux-x86_64.sh -b -p /opt/miniconda3 \
     && rm -rf /tmp/Miniconda3-${CONDA_VERSION}-Linux-x86_64.sh \
-    && /opt/miniconda3/bin/conda install -y -c conda-forge \
+    && /opt/miniconda3/bin/conda install -y mamba -c conda-forge
+    && /opt/miniconda3/bin/mamba install -y -c conda-forge \
     jupyterlab ipywidgets \
-    && /opt/miniconda3/bin/conda install -y \
+    && /opt/miniconda3/bin/mamba install -y \
     ipython \
     cython \
     pytest autopep8 pylint \
@@ -55,7 +56,7 @@ RUN wget -O /tmp/Miniconda3-${CONDA_VERSION}-Linux-x86_64.sh https://repo.anacon
     protobuf=3.20 \
     pillow \
     && /opt/miniconda3/bin/pip install pybind11==2.10 \
-    && /opt/miniconda3/bin/conda clean -a -y \
+    && /opt/miniconda3/bin/mamba clean -a -y \
     && /opt/miniconda3/bin/pip cache purge \
     && chown xundaoxd:xundaoxd -R /opt/miniconda3
 ENV PATH="/opt/miniconda3/bin:${PATH}"
