--- a/dockerfiles/base/Dockerfile
+++ b/dockerfiles/base/Dockerfile
@@ -44,7 +44,7 @@ RUN wget -O /tmp/Miniconda3-${CONDA_VERSION}-Linux-x86_64.sh https://repo.anacon
     && chmod +x /tmp/Miniconda3-${CONDA_VERSION}-Linux-x86_64.sh \
     && /tmp/Miniconda3-${CONDA_VERSION}-Linux-x86_64.sh -b -p /opt/miniconda3 \
     && rm -rf /tmp/Miniconda3-${CONDA_VERSION}-Linux-x86_64.sh \
-    && /opt/miniconda3/bin/conda install -y mamba -c conda-forge
+    && /opt/miniconda3/bin/conda install -y mamba -c conda-forge \
     && /opt/miniconda3/bin/mamba install -y -c conda-forge \
     jupyterlab ipywidgets \
     && /opt/miniconda3/bin/mamba install -y \
