--- a/dockerfiles/ml/Dockerfile
+++ b/dockerfiles/ml/Dockerfile
@@ -22,11 +22,15 @@ RUN pip install https://storage.googleapis.com/tensorflow/linux/gpu/tensorflow_g
     && pip cache purge \
     && conda clean -a -y
 
-ARG TVM_VERSION=0.10.0
-RUN pip install https://github.com/sw-builder/tvm-builder/releases/download/v${TVM_VERSION}/tvm-${TVM_VERSION}-cp37-cp37m-linux_x86_64.whl \
-    && pip cache purge
+RUN pip install --upgrade tensorrt \
+    && pip cache purge \
+    && conda clean -a -y
 
 RUN pip install onnxruntime-gpu tf2onnx skl2onnx \
     && pip install --upgrade transformers \
+    && pip cache purge
+
+ARG TVM_VERSION=0.10.0
+RUN pip install https://github.com/sw-builder/tvm-builder/releases/download/v${TVM_VERSION}/tvm-${TVM_VERSION}-cp37-cp37m-linux_x86_64.whl \
     && pip cache purge
 
