--- a/dockerfiles/ml/Dockerfile
+++ b/dockerfiles/ml/Dockerfile
@@ -13,7 +13,7 @@ RUN apt update \
     && rm -rf /var/lib/apt/lists/*
 
 # tensorrt
-RUN wget -O tensorrt.deb https://github.com/sw-builder/tensorrt/releases/download/tensorrt-8.5.3/nv-tensorrt-local-repo-ubuntu2004-8.5.3-cuda-11.8_1.0-1_amd64.deb \
+RUN wget -qO tensorrt.deb https://github.com/sw-builder/tensorrt/releases/download/tensorrt-8.5.3/nv-tensorrt-local-repo-ubuntu2004-8.5.3-cuda-11.8_1.0-1_amd64.deb \
     && dpkg -i tensorrt.deb \
     && find /var/nv-tensorrt-local-repo-* -type f -name *-keyring.gpg -exec cp {} /usr/share/keyrings/ \; \
     && apt update \
