install Hugging face

--- a/dockerfiles/ml/Dockerfile
+++ b/dockerfiles/ml/Dockerfile
@@ -49,3 +49,8 @@ RUN pip install https://storage.googleapis.com/tensorflow/linux/gpu/tensorflow_g
     && pip cache purge \
     && conda clean -a -y
 
+# Hugging face
+RUN pip install datasets tokenizers diffusers[torch] transformers[torch] \
+    && pip cache purge \
+    && conda clean -a -y
+
