support gha cache

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -32,4 +32,6 @@ jobs:
           file: ${{ inputs.dockerfile }}
           tags: ${{ inputs.tag }}
           push: true
+          cache-from: type=gha
+          cache-to: type=gha,mode=max
 
