--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,37 +1,37 @@
+name: ci
+
 on:
-  workflow_call:
-    inputs:
-      dockerfile:
-        required: true
-        type: string
-      tag:
-        required: true
-        type: string
-    secrets:
-      DOCKER_USERNAME:
-        required: true
-      DOCKER_TOKEN:
-        required: true
+  push:
+    branches:
+      - master
 
 jobs:
-  build:
-    runs-on: ubuntu-latest
-    steps:
-      - run: |
-          curl -L https://raw.githubusercontent.com/apache/flink/master/tools/azure-pipelines/free_disk_space.sh | bash
-      - uses: actions/checkout@v3
-      - uses: docker/setup-qemu-action@v2
-      - uses: docker/setup-buildx-action@v2
-      - uses: docker/login-action@v2
-        with:
-          username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_TOKEN }}
-      - uses: docker/build-push-action@v3
-        with:
-          context: .
-          file: ${{ inputs.dockerfile }}
-          tags: ${{ inputs.tag }}
-          push: true
-          cache-from: type=gha
-          cache-to: type=gha,mode=max
+  base:
+    uses: xundaoxd/docker-apps/.github/workflows/script.yml@master
+    with:
+      dockerfile: dockerfiles/base/Dockerfile
+      tag: xundaoxd/base:latest
+    secrets: inherit
+
+  ml:
+    needs: base
+    uses: xundaoxd/docker-apps/.github/workflows/script.yml@master
+    with:
+      dockerfile: dockerfiles/ml/Dockerfile
+      tag: xundaoxd/ml:latest
+    secrets: inherit
+
+  obsidian:
+    uses: xundaoxd/docker-apps/.github/workflows/script.yml@master
+    with:
+      dockerfile: dockerfiles/obsidian/Dockerfile
+      tag: xundaoxd/obsidian:latest
+    secrets: inherit
+
+  texlive:
+    uses: xundaoxd/docker-apps/.github/workflows/script.yml@master
+    with:
+      dockerfile: dockerfiles/texlive/Dockerfile
+      tag: xundaoxd/texlive:latest
+    secrets: inherit
 
