--- a/.github/workflows/script.yml
+++ b/.github/workflows/script.yml
@@ -7,6 +7,9 @@ on:
       tag:
         required: true
         type: string
+      build-args:
+        required: false
+        type: string
     secrets:
       DOCKER_USERNAME:
         required: true
@@ -31,6 +34,7 @@ jobs:
           context: .
           file: ${{ inputs.dockerfile }}
           tags: ${{ inputs.tag }}
+          build-args: ${{ inputs.build-args }}
           push: true
           cache-from: type=gha
           cache-to: type=gha,mode=max
