--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -10,7 +10,7 @@ jobs:
     uses: xundaoxd/docker-apps/.github/workflows/script.yml@master
     with:
       dockerfile: dockerfiles/base/Dockerfile
-      tag: xundaoxd/base:11.6.2-cudnn8-devel-ubuntu20.04-py3.7
+      tag: xundaoxd/base:11.6.2-cudnn8-devel-ubuntu20.04-py3.8
       build-args: 'BASE_IMAGE=nvidia/cuda:11.6.2-cudnn8-devel-ubuntu20.04'
     secrets: inherit
 
@@ -20,6 +20,7 @@ jobs:
     with:
       dockerfile: dockerfiles/ml/Dockerfile
       tag: xundaoxd/ml:latest
+      build-args: 'BASE_IMAGE=xundaoxd/base:11.6.2-cudnn8-devel-ubuntu20.04-py3.8'
     secrets: inherit
 
   obsidian:
